libarchive: Fix for CVE-2018-1000877 CVE-2018-1000878 CVE-2018-1000879 CVE-2018-1000880
CVEs fixed in this build:
CVE-2018-1000877
CVE-2018-1000878
CVE-2018-1000879
CVE-2018-1000880

Remove stale patches. The have been integrated into v3.3.3 (or earlier).

--- a/options.conf
+++ b/options.conf
@@ -2,7 +2,7 @@
 name = libarchive
 url = http://www.libarchive.org/downloads/libarchive-3.3.3.tar.gz
 archives = 
-giturl = 
+giturl = https://github.com/libarchive/libarchive.git
 
 [autospec]
 # build 32 bit libraries
