--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = libarchive
-url = http://www.libarchive.org/downloads/libarchive-3.3.3.tar.gz
+url = https://github.com/libarchive/libarchive/releases/download/v3.4.0/libarchive-3.4.0.tar.gz
 archives = 
 giturl = https://github.com/libarchive/libarchive.git
 
@@ -54,5 +54,5 @@ use_clang = false
 # configure build for lto
 use_lto = false
 # require package verification for build
-verify_required = false
+verify_required = true
 
