libarchive: Autospec creation for update from version 3.7.4 to version 3.7.7
Christian Schmitz (1):
      Update archive_private to avoid template keyword (#2342)

Dag-Erling Smørgrav (1):
      Miscellaneous code cleanup (#2285)

Duncan Horn (12):
      Fix compilation when using Clang in "MSVC mode" (#2221)
      Update archive_entry_link_resolver to copy the "wide" pathname for hardlinks on Windows (#2225)
      Add unicode test for creating zip files on Windows (#2231)
      Update ustar creation sanity check to use WCS path on Windows (#2230)
      Fix a couple issues with creating PAX archives (#2228)
      Fix issue when skipping first file in 7zip archive that is a multiple of 65536 bytes (#2245)
      Fix & optimize string conversion functions for Windows (#2226)
      Fix gnutar creation with unicode hardlink names on Windows (#2227)
      Fix 'test_pax_filename_encoding_UTF16_win' by explicitly setting hdrcharset (#2248)
      Fix compilation warnings (#2246)
      Update RAR5 code to report encryption (#2096)
      [7zip] Read/write symlink paths as UTF-8 (#2252)

Dustin L. Howett (3):
      rar4 reader: protect copy_from_lzss_window_to_unp() (#2172)
      Fix tar -w on Windows (#2219)
      xar: guard against file entries containing multiple name elements (#2236)

Emil Velikov (4):
      cat: squash s/it/is/ typo (#2292)
      tests: reduce zstd long option to 23 (#2305)
      archive_write: validate header before arguments (#2315)
      Convert the tools and respective tests to SPDX (#2317)

Fatima Qarni (1):
      Checks for null references (#2251)

Grzegorz Antoniak (1):
      RAR5 reader: clear 'data ready' cache on window buffer reallocs (#2265)

Lukas Javorsky (3):
      Fix handling a negative bytes_per_block values (#2206)
      Use calloc instead of malloc to clear the memory from leftovers (#2207)
      Fix multiple vulnerabilities identified by SAST (#2256)

LukeSkyD (1):
      rar reader: fix cast to unsigned int (#2209)

Martin Matuska (5):

--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = libarchive
-url = https://github.com/libarchive/libarchive/releases/download/v3.7.4/libarchive-3.7.4.tar.gz
+url = https://github.com/libarchive/libarchive/releases/download/v3.7.7/libarchive-3.7.7.tar.gz
 archives = 
 giturl = https://github.com/libarchive/libarchive.git
 domain = 
@@ -16,7 +16,9 @@ allow_test_failures = false
 # unset %build ld_as_needed variable
 asneeded = false
 # this package is trusted enough to automatically update (used by other tools)
-autoupdate = false
+autoupdate = true
+# try to use mock short circuit to avoid full rebuilds
+avoid_rebuild = false
 # extend flags with '-std=gnu++98
 broken_c++ = false
 # disable parallelization during build
@@ -71,6 +73,8 @@ use_avx512 = false
 use_clang = false
 # configure build for lto
 use_lto = false
+# use ninja build files
+use_ninja = false
 # require package verification for build
 verify_required = true
 
