--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = libarchive
-url = https://github.com/libarchive/libarchive/releases/download/v3.7.7/libarchive-3.7.7.tar.gz
+url = https://github.com/libarchive/libarchive/releases/download/v3.7.9/libarchive-3.7.9.tar.gz
 archives = 
 giturl = https://github.com/libarchive/libarchive.git
 domain = 
@@ -37,6 +37,8 @@ fast-math = false
 full-debug-info = false
 # optimize build for speed over size
 funroll-loops = true
+# require license subpackage for successful build
+has_license = true
 # set flags to smallest -02 flags possible
 insecure_build = false
 # do not remove static libraries
